fixed readings graph issue on mobile view

--- a/src/app/components/core/asset-readings/readings-graph/readings-graph.component.css
+++ b/src/app/components/core/asset-readings/readings-graph/readings-graph.component.css
@@ -26,6 +26,10 @@
   background-color: #85C1E9 !important;
 }
 
+table.is-borderless tr a {
+  padding-left: 0;
+}
+
 table.is-borderless td,
 table.is-borderless tr {
   border: 0 !important;
